<?xml version="1.0" encoding="UTF-8"?>
<!--

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apidesign.graalvm</groupId>
    <artifactId>pom</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Extra GraalVM Native Utilities</name>
    <url>https://github.com/jtulach/graalvm-native-libs</url>
    <description>
    This package contains useful utilities for working with GraalVM native-image ahead-of-time compilation.
    </description>

    <modules>
        <module>jvm-channel</module>
        <module>persist-dsl</module>
        <module>persist</module>
        <module>jvm-interop</module>
        <module>examples/jvmlauncher</module>
        <module>examples/jvmchannel</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <repoDir>${basedir}</repoDir>
        <moduleName>${project.name}</moduleName>
    </properties>
    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://opensource.org/license/apache-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <organization>
        <name>API Design</name>
        <url>http://apidesign.org</url>
    </organization>
    <developers>
        <developer>
            <name>Jaroslav Tulach</name>
            <organization>API Design</organization>
            <email>jaroslav.tulach@apidesign.org</email>
            <roles>
                <role>Architect</role>
                <role>Initial Developer</role>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/jtulach/graalvm-native-libs.git</connection>
        <developerConnection>scm:git:https://github.com/jtulach/graalvm-native-libs.git</developerConnection>
        <url>https://github.com/jtulach/graalvm-native-libs</url>
        <tag>HEAD</tag>
    </scm>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.graalvm.sdk</groupId>
                <artifactId>nativeimage</artifactId>
                <version>25.0.3</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.10.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>5.10.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.frgaal</groupId>
                            <artifactId>compiler-maven-plugin</artifactId>
                            <version>25.0.0</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <compilerId>frgaal</compilerId>
                        <source>25</source>
                        <target>25</target>
                        <compilerArgs>
                            <arg>-Xlint:deprecation</arg>
                            <arg>-proc:full</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Multi-Release>true</Multi-Release>
                                <Automatic-Module-Name>${moduleName}</Automatic-Module-Name>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                    <configuration>
                        <additionalOptions>
                            <additionalOption>
                                --snippet-path=${basedir}/src/test/java
                            </additionalOption>
                        </additionalOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>1.1.0</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>compile-no-fork</goal>
                            </goals>
                            <phase>process-test-resources</phase>
                            <configuration>
                            </configuration>
                        </execution>
                        <execution>
                            <id>test-native</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <phase>test</phase>
                            <configuration>
                                <buildArgs>
                                    <arg>-ea</arg>
                                    <!--
                                    To debug tests in Native Mode:
                                    - JAVA_HOME=~/graalvm-25/ mvn -Pnative clean install
                                    - edit ./jvm/target/test-ids/junit-platform-unique-ids*.txt to select the right test
                                    ```
                                    JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,address=8000 \
                                    `pwd`/jvm/target/native-tests \
                                    -XX:JDWPOptions=transport=dt_socket,server=y,address=8000 \
                                    -Djunit.platform.listeners.uid.tracking.output.dir=./jvm/target/test-ids
                                    ```
                                    - and then connect twice(!) to the debugging awaiting at port 8000
                                    -->
                                    <arg>-H:+UnlockExperimentalVMOptions</arg>
                                    <arg>-H:+JDWP</arg>
                                </buildArgs>
                                <debug>true</debug>
                            </configuration>
                        </execution>
                    </executions>
                    <configuration>
                        <metadataRepository>
                            <enabled>false</enabled>
                        </metadataRepository>
                        <skipBaseSBOM>true</skipBaseSBOM>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.mycila</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>5.0.0</version>
                    <configuration>
                        <header>${repoDir}/src/license-header.txt</header>
                        <excludes>
                            <exclude>**/README*</exclude>
                            <exclude>**/LICENSE*</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.10.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>gpg-sign</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.4.0</version>
                        <executions>
                            <execution>
                                <id>source-file</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.12.0</version>
                        <executions>
                            <execution>
                                <id>javadoc-file</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>